# unionai-docs-infra

./: .gitignore  .redirects-checkpoint  .redirects-exclude  404.html.tmpl  404.inc.html~flyte  CLAUDE.md  CODEOWNERS  Makefile  Makefile.api.plugins  Makefile.api.sdk  README.md  ROUTING-ARCHITECTURE.md  UNIONAI_DOCS_BUILD.md  config.byoc.toml  config.flyte.toml  config.selfmanaged.toml  config.serverless.toml  hugo.dev.toml  hugo.local.toml~sample  hugo.site.toml  hugo.toml  hugo.ver.toml  index.html.tmpl  pyproject.toml  redirects.csv  setup-api-generator.sh
layouts/: robots.txt  sitemap.xml
layouts/_default/: baseof.html  baseof.md  four-o-four.html  list.html  list.md  plugin.html  py_api.html  py_example.html  single.html  single.md
layouts/home/: sitemap.xml
layouts/partials/: autolink-python.html  breadcrumb.html  flyte-banner.html  footer-nav.html  header-logo.html  header.html  no-content.html  page-allowed.html  page-title.html  rel-link.html  resource-map.html  run-on-union.html  run-on-union.md  runllm.html  search.html  seo-meta.html  sidebar.html  signup.html  (+4 more)
scripts/: Caddyfile  build_dist.sh  build_timer.sh  check_images.sh  dev-pre-flight.sh  export-cloudflare-rules.sh  gen_404.sh  make_usage.sh  pre-build-checks.sh  pre-flight.sh  run_hugo.sh  serve.sh
templates/: markdown.tmpl
tests/: test_cli_docs_coverage.py  test_link_processing.py  test_markdown_tree.py  test_redirects.py
tools/: _repo.py  api_cli_generate.py  api_config.py  api_sdk_generate.py  check_generated_content.py  clean_generated.py  compare_generated_docs.py  validate_urls.py
(+100 files in other folders)
